# twitter-archive-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  regexes.yaml
src/: guards.rs  main.rs  models.rs  templates.rs
static/css/: style.css
templates/: fork-corner.html  index-mastodon.html  index.html
