[package]
name = "twitter-archive-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-v2 = { git = "https://github.com/videah/twitter-v2-rs" }
serde = { version = "1.0", features = ["derive"] }
rocket-governor = { version = "0.1.0-rc.4", features = ["limit_info"] }
askama = { git = "https://github.com/djc/askama.git", rev = "8142963", default-features = false, features = ["with-rocket", "mime", "mime_guess"] }
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "8142963" }
user-agent-parser = { version = "0.3.3", features = ["rocket"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
